tests/codegen/pass/011-sqrt.hyg
assert(sqrt(16) = 4.0f)